[FIX] mail: placement of the attachment action button distorted on small size
Before this commit:
When the attachment size was too small, the download and delete buttons were
incorrectly positioned, leading to a less user-friendly experience.

Aftert this commit:
The action buttons are not shown for small images and you get the delete option
when the image is zommed in.

task-3563828

--- a/addons/mail/static/src/components/attachment_image/attachment_image.scss
+++ b/addons/mail/static/src/components/attachment_image/attachment_image.scss
@@ -17,3 +17,7 @@
 .o_AttachmentImage {
     cursor: zoom-in;
 }
+
+.o_AttachmentImage_action{
+    z-index: 1;
+}
